# learn-kafkaclient

./: Cargo.toml  Dockerfile
src/: main.rs
