[package]
name = "foo"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
rdkafka = "0.24.0"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.11"
chrono = "0.4.19"
clap = "2.33.3"
futures = "0.3.6"

[dependencies.openssl]
version = "0.10.30"
features = [
    "vendored"
]
